# pyiron_nodes

./: .coveragerc  .gitattributes  .gitignore  MANIFEST.in  pyproject.toml  requirements.txt
.binder/: environment.yml  postBuild
.ci_support/: environment.yml  environment_fenicsx_large_scale_atomistics.yml  exclude
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: daily.yml  preview-release.yml  push-pull.yml  push-pull10.yml  push-pull12.yml  test.yml
docs/: README.md  conf.py  environment.yml  index.rst
node_library/: atomistic_codes.py  dev_tools.py  math.py  plotting.py
node_library/atomistic/calculator/: ase.py  data.py  generic.py  output.py
node_library/atomistic/engine/: ase.py  generic.py  lammps.py  vasp.py
node_library/atomistic/property/: elastic.py  phonons.py  thermodynamics.py
node_library/atomistic/structure/: build.py  calc.py  transform.py  view.py
node_library/databases/: elasticity.py
node_library/development/: hash_based_storage.py  node_dataclass.py
notebooks/: README.MD  example.ipynb  examples.ipynb  getstate_experiments.ipynb  hash_based_db_node_storage.ipynb  plot_trig_example.ipynb  pyiron_like_workflows.ipynb  test_surface.ipynb
notebooks_dev/: hash_based_node_storage.ipynb
pyiron_nodes/: __init__.py  _version.py  atomistic_codes.py  dev_tools.py  lammps.py  math.py  plotting.py  pyiron_atomistics.py  standard.py
pyiron_nodes/FEM/: __init__.py
pyiron_nodes/FEM/boundary_conditions/: __init__.py
pyiron_nodes/FEM/custom_nodes/: __init__.py
pyiron_nodes/FEM/function_spaces/: __init__.py
pyiron_nodes/FEM/geometries/: __init__.py  three_d_geometries.py
pyiron_nodes/FEM/load_definitions/: __init__.py  poisson_load_expr.py
pyiron_nodes/FEM/mesh_visualization/: __init__.py
pyiron_nodes/FEM/solvers/: __init__.py
pyiron_nodes/atomistic/: __init__.py
pyiron_nodes/atomistic/ASSYST/: example.py  example_custodian.py  structure_filter_utils.py  workflow.py
pyiron_nodes/atomistic/calculator/: __init__.py  ase.py  data.py  generic.py  output.py
pyiron_nodes/atomistic/engine/: __init__.py  ase.py  generate_vasp_pyiron_config.md  generic.py  lammps.py  pyiron-vasp-config.ipynb  vasp.py  vasp_pseudopotential_PBE_data.csv
pyiron_nodes/atomistic/property/: __init__.py  elastic.py  phonons.py  thermodynamics.py
pyiron_nodes/atomistic/structure/: __init__.py  build.py  calc.py  transform.py  view.py
pyiron_nodes/atomistic/structure_sets/: LRPfit.py  build.py
pyiron_nodes/continuum_fem/: __init__.py
pyiron_nodes/continuum_fem/boundary_conditions/: __init__.py  scalar_geometric.py
pyiron_nodes/continuum_fem/custom_nodes/: __init__.py  custom_plots.py
pyiron_nodes/continuum_fem/function_spaces/: __init__.py  general_function_spaces.py
pyiron_nodes/continuum_fem/geometries/: __init__.py  three_d_geometries.py  two_d_geometries.py
pyiron_nodes/continuum_fem/load_definitions/: __init__.py  poisson_load_expr.py
pyiron_nodes/continuum_fem/mesh_visualization/: __init__.py  pyvista_viz.py
pyiron_nodes/continuum_fem/solvers/: __init__.py  linear_elasticity.py  poisson_equations.py
pyiron_nodes/databases/: __init__.py  elasticity.py  node_hash_db.py
pyiron_nodes/development/: hash_based_storage.py  node_dataclass.py  settings.py  wf_graph_tools.py
tests/unit/: test_hash_based_storage.py  test_tests.py  test_vasp.py
(+65 files in other folders)
